--- a/src/components/currentcourse.astro
+++ b/src/components/currentcourse.astro
@@ -52,12 +52,12 @@ import ActivityCard2 from "@components/activities/2-videogames-programmieren-fue
             href="/mint-activities/1-programierung-videogame-primarschueler"
             class="inline-flex gap-2 items-center justify-center mt-4 bg-white text-xl">
             <Icon class="text-black w-8 h-8" name="bx:info-circle" />
-            <span class="hidden xs:inline">Jetzt Alle Details entdecken!</span>
-            <span class="inline xs:hidden">Alle Details!</span>
+            <span class="hidden xs:inline">Alle Details entdecken und anmelden!</span>
+            <span class="inline xs:hidden">Alle Details und Anmeldung!</span>
           </Link>
         </p>
       </div>
-      <div class="md:col-span-2 md:pt-11 md:order-2">
+      <div class="md:col-span-2 md:pt-9 md:order-2">
         <Link href="/activities/ruler-pacman/flyer-informatik-kurs-primarschule-ruler-7-10.pdf" appearance="unstyled" target="_blank">
           <Picture
             class="border-2 border-black rounded-xl"
@@ -74,7 +74,7 @@ import ActivityCard2 from "@components/activities/2-videogames-programmieren-fue
     <div class="grid md:grid-cols-6 gap-4 md:gap-16 place-items-top md:ml-4 md:mr-16">
       <div class="md:col-span-4 stretch md:order-1 md:mb-16">
 
-        <h2 class="text-2xl lg:text-3xl font-bold lg:tracking-tight mt-10 md:mt-0">3er Serienkurs Informatik mit Videogames</h2>
+        <h2 class="text-2xl lg:text-3xl font-bold lg:tracking-tight mt-10 md:mt-0">3er-Serien-Kurs Informatik mit Videogames</h2>
 
         <Link href="/mint-activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler" appearance="unstyled">
           <ActivityCard2 />
@@ -97,12 +97,12 @@ import ActivityCard2 from "@components/activities/2-videogames-programmieren-fue
             href="/mint-activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler"
             class="inline-flex gap-2 items-center justify-center mt-4 bg-white text-xl">
             <Icon class="text-black w-8 h-8" name="bx:info-circle" />
-            <span class="hidden xs:inline">Jetzt Alle Details entdecken!</span>
-            <span class="inline xs:hidden">Alle Details!</span>
+            <span class="hidden xs:inline">Alle Details entdecken und anmelden!</span>
+            <span class="inline xs:hidden">Alle Details und Anmeldung!</span>
           </Link>
         </p>
       </div>
-      <div class="md:col-span-2 md:pt-11 md:order-2">
+      <div class="md:col-span-2 md:pt-9 md:order-2">
         <Link href="/activities/ruler-pacman/flyer-informatik-kurs-primarschule-ruler-serie-11.pdf" appearance="unstyled" target="_blank">
           <Picture
             class="border-2 border-black rounded-xl"
