--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -15,11 +15,11 @@ const menuitems = [
         path: "/kurse"
       },
       {
-        title: "Einzelkurs: Baue Dein eigenes Videogame!",
+        title: "Baue Dein eigenes Videogame! Kurs ab 7 Jahren",
         path: "/mint-activities/1-programierung-videogame-primarschueler"
       },
       {
-        title: "3er Serie Videogames für Kids ab 11 Jahren",
+        title: "3er-Serie Videogames für Kids ab 11 Jahren",
         path: "/mint-activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler"
       }
     ]
