--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -36,7 +36,7 @@ const appearances = {
   href={href}
   {...rest}
   class:list={[
-    "rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200",
+    "rounded-xl text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200",
     block && "w-full",
     sizes[size],
     appearances[appearance],
