--- a/src/components/activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler.astro
+++ b/src/components/activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler.astro
@@ -4,7 +4,7 @@ import Link from "../ui/link.astro";
 import { Picture } from "astro:assets";
 ---
 
-<div class="border-2 border-dashed border-black bg-white rounded-xl px-6 pt-2 pb-4">
+<div class="border-2 border-black bg-white rounded-xl px-6 pt-2 pb-4">
   <div class="mt-4 flex flex-row">
     <Icon class="text-black w-10 h-10 pb-2 inline-block mr-2" name="bx:user" />
     <div class="mt-1 ml-1 text-left">
