--- a/src/pages/mint-activities/1-programierung-videogame-primarschueler.astro
+++ b/src/pages/mint-activities/1-programierung-videogame-primarschueler.astro
@@ -85,7 +85,7 @@ import { Picture } from "astro:assets";
         Eltern dürfen ihre Kinder gern begleiten und helfen.
       </p>
       <p>
-        Interessierte Lehrpersonen können sich gern bei uns melden, um weitere Informationen oder Anregungen für den eigenen Unterricht zu erhalten.
+        Interessierte Lehrpersonen können sich <a href="/kontakt/">gern bei uns melden</a>, um weitere Informationen oder Anregungen für den eigenen Unterricht zu erhalten.
       </p>
 
       <h2 class="font-bold text-3xl text-gray-800">
