--- a/src/components/activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler.astro
+++ b/src/components/activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler.astro
@@ -29,7 +29,7 @@ import { Picture } from "astro:assets";
   <div class="mt-4 flex flex-row">
     <Icon class="text-black w-10 h-10 pb-2 inline-block mr-2" name="bx:building-house" />
     <div class="mt-1 ml-1 text-left">
-      <span class="block xs:inline">Gemeindesaal Meggen</span><br>
+      <span class="block xs:inline">Gemeindehaus Meggen</span><br>
       <span class="block xs:inline">Am Dorfplatz 3</span>
     </div>
   </div>
