blog => news prep

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -30,8 +30,8 @@ const menuitems = [
     badge: false
   },
   // {
-  //   title: "Blog",
-  //   path: "/blog"
+  //   title: "News",
+  //   path: "/news"
   // },
   {
     title: "Kontakt",
