--- a/src/pages/ueberuns.astro
+++ b/src/pages/ueberuns.astro
@@ -28,13 +28,15 @@ publishedTeamMembers.sort(function(a, b) {
       <p>
         Wir sind Diana und Rocco Georgi, selbst Eltern von Kindern im Primar- und Kanti-Alter und leidenschaftliche MINT-Fans.
       </p>
-      <p>
-        <strong>
-          Mit Wonder Dots möchten wir Kindern früh den Zugang zu Informatik, Technik und Naturwissenschaften eröffnen. Spielerisch, kreativ und praxisnah.
-        </strong>
-      </p>
-    </div>
 
+
+    </div>
+    <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
+      <blockquote class="text-black border-l-4 border-black pl-4">
+        Mit Wonder Dots möchten wir Kindern früh den <strong>Zugang zu Informatik, Technik und Naturwissenschaften</strong> eröffnen. <strong>Spielerisch, kreativ und innovativ</strong>.
+      </blockquote>
+
+    </div>
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
       <h2 class="font-bold text-3xl text-gray-800">
         Eltern für MINT
@@ -70,7 +72,7 @@ publishedTeamMembers.sort(function(a, b) {
             </div>
 
             <div class="mt-4 text-center  text-gray-800">
-                {teamMemberEntry.data.avatar.alt}
+              {teamMemberEntry.data.avatar.alt}
             </div>
           </div>
         ))
@@ -85,7 +87,8 @@ publishedTeamMembers.sort(function(a, b) {
       </p>
       <p>
         Rocco ist Software Engineer (M.A.) und entwickelt Software bei <a href="https://pax.ch" rel="nofollow noopener">PAX</a>.
-        Er ist im Team der <a href="https://www.fhnw.ch/de/die-fhnw/hochschulen/ph/institute/institut-primarstufe/professuren-am-ip/professur-informatische-bildung" rel="nofollow noopener">Professur Informatische Bildung am Institut Primarstufe an der FHNW</a> und entwickelt dort
+        Er ist im Team der <a href="https://www.fhnw.ch/de/die-fhnw/hochschulen/ph/institute/institut-primarstufe/professuren-am-ip/professur-informatische-bildung" rel="nofollow noopener">Professur Informatische Bildung am Institut Primarstufe an
+        der FHNW</a> und entwickelt dort
         die Bildungssoftware <a href="https://ruler.game" rel="nofollow noopener">RULER.game</a> mit, die Lehrpersonen und Kinder im Computational Thinking unterstützt.
 
         Er verfügt über mehr als 20 Jahre Erfahrung in der Softwareentwicklung in internationalen Projekten, als Referent auf Fachkonferenzen und hat Erfahrung als Ausbilder und Lehrer.
