--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -5,8 +5,8 @@ import Container from "@components/container.astro";
 
 // Generate a new path for every collection entry
 export async function getStaticPaths() {
-  const blogEntries = await getCollection("blog");
-  return blogEntries.map((entry) => ({
+  const newsEntries = await getCollection("news");
+  return newsEntries.map((entry) => ({
     params: { slug: entry.slug },
     props: { entry },
   }));
@@ -53,9 +53,9 @@ const { Content } = await entry.render();
     </div>
     <div class="text-center mt-8">
       <a
-        href="/blog"
+        href="/news"
         class="bg-gray-100 px-5 py-3 rounded-md hover:bg-gray-200 transition"
-        >← Back to Blog</a
+        >Zurück zu allen News</a
       >
     </div>
   </Container>
