--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -29,10 +29,10 @@ const menuitems = [
     path: "/ueberuns",
     badge: false
   },
-  // {
-  //   title: "News",
-  //   path: "/news"
-  // },
+  {
+    title: "News",
+    path: "/news"
+  },
   {
     title: "Kontakt",
     path: "/kontakt"
