--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -28,10 +28,10 @@ const { Content } = await entry.render();
         {entry.data.title}
       </h1>
       <div class="flex gap-2 mt-3 items-center flex-wrap md:flex-nowrap">
-        <span class="text-gray-400">
-          {entry.data.author}
-        </span>
-        <span class="text-gray-400">•</span>
+        <!--<span class="text-gray-400">-->
+        <!--  {entry.data.author}-->
+        <!--</span>-->
+        <!--<span class="text-gray-400">•</span>-->
         <time
           class="text-gray-400"
           datetime={entry.data.publishDate.toISOString()}>
