--- a/src/components/aboutcourses.astro
+++ b/src/components/aboutcourses.astro
@@ -55,7 +55,7 @@ const eventimages = [
   </h2>
   <p>
     Unsere Kurse sind keine herkömmlichen Programmierkurse:
-    Sie vermitteln <strong><a href="https://en.wikipedia.org/wiki/Computational_thinking" rel="nofollow noopener">Computational Thinking</a></strong> – das logische,
+    Sie vermitteln <strong><a href="/news/computaional-thinking-in-unseren-kursen-fuer-primarschueler/">Computational Thinking</a></strong> – das logische,
     strukturierte und kreative Denken, das hinter jeder Programmier-Lösung steckt.
   </p>
   <p>
