--- a/src/components/conceptquote.astro
+++ b/src/components/conceptquote.astro
@@ -2,7 +2,7 @@
 ---
 
 <blockquote class="text-black border-l-4 border-black pl-4">
-  Wir vermitteln die Konzepte des <a href="https://en.wikipedia.org/wiki/Computational_thinking" rel="nofollow noopener"><strong>Computational Thinking</strong></a>
+  Wir vermitteln die Konzepte des <a href="/news/computaional-thinking-in-unseren-kursen-fuer-primarschueler/"><strong>Computational Thinking</strong></a>
   und benutzen dabei die an der <a href="https://www.fhnw.ch/de/die-fhnw/hochschulen/ph/institute/institut-primarstufe/professuren-am-ip/professur-informatische-bildung/arbeitsgebiet" rel="nofollow noopener">FHNW</a>
   entwickelte Lernsoftware <a href="https://ruler.game" rel="nofollow noopener">RULER.game</a>, die - wissenschaftlich fundiert - neue Wege in der Informatischen Bildung ermöglicht.
 </blockquote>
