--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -29,7 +29,7 @@ import Link from "@components/ui/link.astro";
 
           <p class="mt-4">
             Unsere <strong>interaktiven Kurse</strong> in <strong>kleinen Gruppen</strong> fördern gezielt
-            das <strong>informatische Denken</strong> (Computational Thinking) und wecken spielerisch
+            das <a href="/news/computaional-thinking-in-unseren-kursen-fuer-primarschueler/"><strong>Informatische Denken</strong> (Computational Thinking)</a> und wecken spielerisch
             das Interesse an Mathematik, Informatik, Naturwissenschaften und Technik (<strong>MINT</strong>-Fächer).
           </p>
           <p class="mt-4">
